--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@supabase/ssr": "^0.5.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.47.3",
     "assemblyai": "^4.8.0",
     "class-variance-authority": "^0.7.1",
