--- a/package.json
+++ b/package.json
@@ -10,26 +10,41 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.5",
+    "@reactuses/core": "^5.0.23",
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.47.3",
     "assemblyai": "^4.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "elevenlabs": "^0.18.1",
     "groq-sdk": "^0.9.0",
-    "lucide-react": "^0.464.0",
+    "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "wavesurfer.js": "^7.8.11"
   },
   "devDependencies": {
     "typescript": "^5",
