--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
@@ -34,6 +35,7 @@
     "date-fns": "^4.1.0",
     "elevenlabs": "^0.18.1",
     "groq-sdk": "^0.9.0",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
