--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
