--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "elevenlabs": "^0.18.1",
+    "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
