--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@reactuses/core": "^5.0.23",
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.47.3",
+    "@vercel/speed-insights": "^1.1.0",
     "assemblyai": "^4.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
