--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@reactuses/core": "^5.0.23",
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.47.3",
+    "@types/nodemailer": "^6.4.17",
     "@vercel/speed-insights": "^1.1.0",
     "assemblyai": "^4.8.0",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +46,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
