--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "elevenlabs": "^0.18.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.0",
     "input-otp": "^1.4.1",
@@ -54,7 +55,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
-    "wavesurfer.js": "^7.8.11"
+    "wavesurfer.js": "^7.8.11",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "typescript": "^5",
