--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-polly": "^3.716.0",
+    "@aws-sdk/client-s3": "^3.717.0",
     "@deepgram/sdk": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
