--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "uuid": "^11.0.3",
     "wavesurfer.js": "^7.8.11",
     "yup": "^1.6.1"
