--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reactuses/core": "^5.0.23",
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.47.3",
+    "@tanstack/react-table": "^8.20.6",
     "@types/nodemailer": "^6.4.17",
     "@vercel/speed-insights": "^1.1.0",
     "assemblyai": "^4.8.0",
