--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "recharts": "^2.15.0",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
