--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "15.0.3",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nodemailer": "^6.9.16",
