--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tabler/icons-react": "^3.27.1",
     "@tanstack/react-table": "^8.20.6",
     "@types/nodemailer": "^6.4.17",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "assemblyai": "^4.8.0",
     "class-variance-authority": "^0.7.1",
