--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nodemailer": "^6.9.16",
+    "posthog-js": "^1.205.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
