--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@supabase/supabase-js": "^2.47.3",
     "@tabler/icons-react": "^3.27.1",
     "@tanstack/react-table": "^8.20.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/nodemailer": "^6.4.17",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "assemblyai": "^4.8.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
