--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "groq-sdk": "^0.9.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
+    "motion": "^12.0.6",
     "next": "15.0.3",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
